orgonize the work more

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,44 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ghita Aqasbi Portfolio</title>
+    <title>Projects | Ghita Aqasbi | Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <style>
-
-
-/* herosection */
-/* #herosection{
-    height: 100vh;
-    max-height: 100vh;
-    width: 100%;
-} */
-
 
     </style>
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo">Logo</a>
+        <a href="../index.html" id="logo">Logo</a>
         <ul>
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="pages/projects.html">Projects</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href=""><ion-icon name="language-outline"></ion-icon></a></li>
 
         </ul>
     </header>
 
-    <section id="herosection">
-        <p>Hello! I'm Ghita Aqasbi</p>
-        <p>A Full Stack Web Developer</p>
-        <p>Recent graduate excited to start my carrer on the professional word. Open to new job opportunities and project collaborations!</p>
-    </section>
 
-<footer>
-        <p><a href="pages/about.html">Learn More About Me<ion-icon name="arrow-forward-outline"></ion-icon></a></p>
+
+
+
+    <footer>
+        <p><a href="contact.html">Cantact Me<ion-icon name="arrow-forward-outline"></ion-icon></a></p>
         <ul id="contact-links">
             <li><a href="https://www.linkedin.com/in/aqasbighita/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://github.com/ghita-aq"><ion-icon name="logo-github"></ion-icon></a></li>
@@ -48,9 +37,8 @@
         </ul>
 </footer>
 
-
-
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
 </body>
 </html>
