working on about

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </style>
 </head>
-<body>
+<body id="c"> 
     <header>
         <a href="index.html" id="logo">Logo</a>
         <ul>
@@ -52,5 +52,8 @@
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script>
+    var c =document.getElementById('c')
+</script>
 </body>
 </html>
