--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,9 +24,10 @@
         </ul>
     </header>
 
+    <section>
+        <h1>Projects.</h1>
 
-
-
+    </section>
 
     <footer>
         <p><a href="contact.html">Cantact Me<ion-icon name="arrow-forward-outline"></ion-icon></a></p>
@@ -35,7 +36,7 @@
             <li><a href="https://github.com/ghita-aq"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="mailto:aqasbi.ghita@gmail.com"><ion-icon name="logo-google"></ion-icon></a></li>
         </ul>
-</footer>
+    </footer>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
