--- a/index.html
+++ b/index.html
@@ -8,37 +8,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-
-
-/* herosection */
-/* #herosection{
-    height: 100vh;
-    max-height: 100vh;
-    width: 100%;
-} */
-
-
-    </style>
 </head>
 <body> 
   <div class="grid"></div>
-    <header>
-        <a href="index.html" id="logo">Logo</a>
-        <ul>
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="pages/projects.html">Projects</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-            <li><a href=""><ion-icon name="language-outline"></ion-icon></a></li>
+  <header>
+    <a href="index.html" id="logo">Logo</a>
+    <ul id="pc-menu">
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/contact2.html">Contact</a></li>
+    </ul>
+    <ul class="tools">
+        <li><a href=""><ion-icon name="language-outline"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="sunny-outline"></ion-icon></a></li>
+        <li id="mobile-menu" onclick="mobilemenu()"><a href="#" ><ion-icon name="grid-outline"></ion-icon></a></li>
+    </ul>
+</header>
 
-        </ul>
-    </header>
+<div class="mobile-menu-overlay" id="mobileMenuOverlay">
+    <ul class="mobile-menu">
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/contact2.html">Contact</a></li>
+    </ul>
+</div>
 
     <section id="herosection">
-        <h1>Hello! I'm Ghita Aqasbi</h1>
-        <p>A Full Stack Web Developer</p>
-        <p>Recent graduate excited to start my carrer on the professional word. Open to new job opportunities and project collaborations!</p>
-    </section>
+        <h1>Hello, I'm Ghita Aqasbi</h1>
+        <p>A Full Stack Web Developer
+        Recent graduate excited to start my carrer on the professional word. Open to new job opportunities and project collaborations!</p>
+        <br>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsam assumenda veniam? Totam perspiciatis, reiciendis id nam in facilis harum dignissimos necessitatibus placeat voluptas ratione eum vero, porro, et quia.</p>
+      </section>
 
 <footer>
         <p><a href="pages/about.html">Learn More About Me<ion-icon name="arrow-forward-outline"></ion-icon></a></p>
@@ -54,36 +55,25 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
-  var c = document.getElementById('c');
-  var ctx = c.getContext('2d');
-  c.height = window.innerHeight;
-  c.width = window.innerWidth;
-  var binary = "01";
-  binary = binary.split("");
-  var font_size = 14;
-  var columns = c.width / font_size;
-  var drops = [];
-  for (var x = 0; x < columns; x++) {
-    drops[x] = 1;
-  }
-
-  function draw() {
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-    ctx.fillRect(0, 0, c.width, c.height); // Fixed the parameter to c.height
-    ctx.fillStyle = "#03fbe9";
-    ctx.font = font_size + "px arial";
-    for (var x = 0; x < drops.length; x++) { // Fixed the loop condition
-      var text = binary[Math.floor(Math.random() * binary.length)];
-      ctx.fillText(text, x * font_size, drops[x] * font_size);
-      if (drops[x] * font_size > c.height && Math.random() > 0.975) {
-        drops[x] = 0;
-      }
-      drops[x]++;
+    const header = document.querySelector('header');
+window.addEventListener('scroll', () => {
+    if (window.scrollY > 0) {
+        header.classList.add('scrolled');
+    } else {
+        header.classList.remove('scrolled');
     }
-  }
+});
+// mobile menu
+const mobileMenuButton = document.getElementById('mobile-menu');
+const mobileMenuOverlay = document.getElementById('mobileMenuOverlay');
 
-  setInterval(draw, 120);
+function mobilemenu() {
+    mobileMenuOverlay.classList.toggle('active');
+}
 
+mobileMenuOverlay.addEventListener('click', () => {
+    mobileMenuOverlay.classList.remove('active');
+});
 </script>
 </body>
 </html>
