--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
-    const header = document.querySelector('header');
-window.addEventListener('scroll', () => {
-    if (window.scrollY > 0) {
-        header.classList.add('scrolled');
-    } else {
-        header.classList.remove('scrolled');
-    }
-});
+//     const header = document.querySelector('header');
+// window.addEventListener('scroll', () => {
+//     if (window.scrollY > 0) {
+//         header.classList.add('scrolled');
+//     } else {
+//         header.classList.remove('scrolled');
+//     }
+// });
 // mobile menu
 const mobileMenuButton = document.getElementById('mobile-menu');
 const mobileMenuOverlay = document.getElementById('mobileMenuOverlay');
