--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,6 +53,14 @@
             font-weight:bolder;
             cursor: pointer;
         }  
+        @media (min-width: 1920px) {
+    section{
+    margin: 0 300px; 
+    }
+footer {
+    margin: 0px 300px 100px 300px;
+ }
+}
         @media (max-width: 992px) {
         section {
             margin: 50px 100px 
