--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,11 +90,8 @@ footer {
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
-        <ul class="tools">
-            <li><a href=""><ion-icon name="language-outline"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="sunny-outline"></ion-icon></a></li>
-            <li id="mobile-menu" onclick="mobilemenu()"><a href="#" ><ion-icon name="grid-outline"></ion-icon></a></li>
-        </ul>
+        <span id="mobile-menu" onclick="mobilemenu()"><ion-icon name="grid-outline"></ion-icon></span>
+
     </header>
 
     <div class="mobile-menu-overlay" id="mobileMenuOverlay">
