--- a/pages/projects.html
+++ b/pages/projects.html
@@ -85,11 +85,8 @@ table a:hover{
             <li><a href="projects.html" class="active">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <ul class="tools">
-            <li><a href=""><ion-icon name="language-outline"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="sunny-outline"></ion-icon></a></li>
-            <li id="mobile-menu" onclick="mobilemenu()"><a href="#" ><ion-icon name="grid-outline"></ion-icon></a></li>
-        </ul>
+        <span id="mobile-menu" onclick="mobilemenu()"><ion-icon name="grid-outline"></ion-icon></span>
+
     </header>
 
     <div class="mobile-menu-overlay" id="mobileMenuOverlay">
