--- a/pages/projects.html
+++ b/pages/projects.html
@@ -107,7 +107,7 @@ table a:hover{
             <tr><td>
                 <h2>Portfolio</h2>
                 <p>Static personnal portfolio built using HTML and CSS and Javascript. Optimized for all mobile and desktop devices.</p>
-                <!-- <a href="https://github.com/ghita-aq"><ion-icon name="logo-github"></ion-icon> GitHub</a> -->
+                <a href="https://github.com/ghita-aq/portfolio" target="_blank"><ion-icon name="logo-github"></ion-icon> GitHub</a>
             </td></tr>
         </table>
         <table>
