--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body> 
   <div class="grid"></div>
   <header>
-    <a href="../index.html" id="logo"><img src="img/logo-bg.png" width="70px"></a>
+    <a href="#" id="logo"><img src="img/logo-bg.png" width="70px"></a>
     <ul id="pc-menu">
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/projects.html">Projects</a></li>
