--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             align-items: left;
             justify-content: center;
         }
+
         #computer {
             width: 50%;
             animation: flyingAnimation 3s infinite;
@@ -92,7 +93,7 @@
                 order: -1;
             }
             .titles{
-                text-align: center;
+            text-align: center;
                position: absolute;
                top: 110px;
                bottom: 50px;
@@ -102,7 +103,11 @@
               
             }
         }
-
+        @media (max-width: 768px) {
+            .titles h1{
+                font-size: 24px;
+            }
+        }
     </style>
 </head>
 <body> 
@@ -130,7 +135,7 @@
         <div class="info">
             <div class="titles">
             <h1>Hello, I'm <b>GHITA AQASBI</b></h1>
-            <h1 >A <span id="job" data-text="Full Stack Web Developer">Full Stack Web Developer</span></h1>
+            <h1>A <span id="job" data-text="Full Stack Web Developer">Full Stack Web Developer</span></h1>
             </div>
             <p>Recent graduate excited to start my carrer on the professional world. Open to new job opportunities and project collaborations !</p>
             <p><a href="pages/about.html" id="call-to-action">LEARN MORE <ion-icon name="caret-forward-circle-outline"></ion-icon></a></p>
