feat : update about me info

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         <div class="info">
             <div class="titles">
             <h1>Hello, I'm <b>GHITA AQASBI</b></h1>
-            <h1>A <span id="job" data-text="Full Stack Web Developer">Full Stack Web Developer</span></h1>
+            <h1>A <span id="job" data-text="Full Stack Web Developer"> Software Developer</span></h1>
             </div>
-            <p>Recent graduate excited to start my carrer on the professional world. Open to new job opportunities and project collaborations !</p>
+            <p>Recent graduate excited to start my carrer on the professional world. Open to new job opportunities and project collaborations!</p>
             <p><a href="pages/about.html" id="call-to-action">LEARN MORE <ion-icon name="caret-forward-circle-outline"></ion-icon></a></p>
             <ul id="contact-links">
                 <li><a href="https://www.linkedin.com/in/aqasbighita/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
