--- a/pages/about.html
+++ b/pages/about.html
@@ -49,9 +49,9 @@
 /* skills */
     .skills{
         display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-gap: 30px;
-        margin: 30px 0px;
+        grid-template-columns: repeat(4,1fr);
+        grid-gap: 20px;
+        margin: 20px 0px;
     }
     .skills table{
         border-collapse: separate; 
@@ -71,7 +71,7 @@
     }
     .skills th{
         color: var(--shining-blue);
-        height: 40px;
+        height: 90px;
     }
     @media (max-width: 768px) {
         .skills{
@@ -109,6 +109,10 @@
             <h1>Education</h1>
             <div class="exp">
                 <div class="describes">
+                    <h3>Bachelor’s Degree in Software Engineering - EST</h3>
+                    <p>I recently graduated with a Bachelor’s Degree in Software Engineering, where I gained solid foundations in computer science, software design, and development.</p>
+                </div> 
+                <div class="describes">
                     <h3>Diploma in Full Stack Web Development - OFPPT</h3>
                     <p>In 2023, I successfully completed this program that equipped me with the essential skills in both front-end and back-end development.</p>
                 </div> 
@@ -116,7 +120,11 @@
             <h1>Experience</h1>
             <div class="exp">
                 <div class="describes">
-                    <h3>Web Developper - DEVPUB SOLUTION</h3>
+                    <h3>Freelance Web Developer - DEVPUB SOLUTION</h3>
+                    <p>For a year and since 2023, I worked as a freelance web developer at DEVPUB SOLUTION, where I contributed to the design, development, and maintenance of web applications.</p>
+                </div>
+                <div class="describes">
+                    <h3>Intern Web Developper - DEVPUB SOLUTION</h3>
                     <p>In 2023, I took an internship as a web developer at DEVPUB SOLUTION, where I significantly enhanced my skills and knowledge in web development.</p>
                 </div>
             </div>
@@ -124,18 +132,23 @@
  
         <div class="skills">
         <table>
-            <tr><th>Front-End</th></tr>
-            <tr><td>HTML CSS JavaScript React jQuery Bootstrap</td></tr>
+            <tr><th>Programming Languages</th></tr>
+            <tr><td>HTML, CSS, JavaScript, PHP, Python, Java</td></tr>
         </table>
+        
 
         <table>
-            <tr><th>Back-End</th></tr>
-            <tr><td>Node PHP Laravel Python C MySQL MongoDB</td></tr>
+            <tr><th>Libraries and Frameworks</th></tr>
+            <tr><td>Spring Boot, Jetpack Compose, React.js, Node.js, Angular, Laravel</td></tr>
         </table>
 
+         <table>
+            <tr><th>Databases</th></tr>
+            <tr><td>MySQL, MongoDB</td></tr>
+        </table>
         <table>
-            <tr><th>Tools</th></tr>
-            <tr><td>Git UML WordPress Figma Canva</td></tr>
+            <tr><th>Tools & Platforms</th></tr>
+            <tr><td>Git, GitHub, GitLab, WordPress, DevOps, Docker, Figma, Canva</td></tr>
         </table>
         </div>
 
